# hdb-node

./: .gitignore  CMakeLists.txt  README.md
script/: cpld.sh  prepare-package.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  analysis.hpp  analysis_manager.cpp  analysis_manager.hpp  app.conf  app.conf.local  bsp.cpp  bsp.hpp  controller.cpp  device.hpp  device_manager.cpp  device_manager.hpp  fsm.hpp  global.cpp  global.hpp  ip_camera.cpp  ip_camera.hpp  loitering.cpp  loitering.hpp  main.cpp  report.hpp  report_illegal_parking.cpp  report_illegal_parking.hpp  report_manager.cpp  report_manager.hpp  service_manager.cpp  service_manager.hpp  squeue.hpp  uploader.cpp  vca.hpp  vca_illegal_parking.cpp  vca_illegal_parking.hpp  vca_manager.cpp
src/app/corecomm/: CMakeLists.txt  CoreServices_constants.cpp  CoreServices_constants.h  CoreServices_types.cpp  CoreServices_types.h  DataService.cpp  DataService.h  DataService_server.skeleton.cpp  DeviceControlService.cpp  DeviceControlService.h  DeviceControlService_server.skeleton.cpp  DeviceManagementService.cpp  DeviceManagementService.h  DeviceManagementService_server.skeleton.cpp  EventStructures_constants.cpp  EventStructures_constants.h  EventStructures_types.cpp  EventStructures_types.h  IndoorLocationService.cpp  IndoorLocationService.h  IndoorLocationService_server.skeleton.cpp  StreamControlService.cpp  StreamControlService.h  StreamControlService_server.skeleton.cpp  main.cpp
src/app/vca/: cars.mjpg  libX11.so.6  libXau.so.6  libXcomposite.so.1  libXcursor.so.1  libXdamage.so.1  libXext.so.6  libXfixes.so.3  libXi.so.6  libXinerama.so.1  libXrandr.so.2  libXrender.so.1  libatk-1.0.so.0  libboost_filesystem.so.1.54.0  libboost_program_options.so.1.54.0  libboost_system.so.1.54.0  libboost_thread.so.1.54.0  libbz2.so.4  libc.so.7  libcairo.so.2  libexpat.so.6  libffi.so.6  libfontconfig.so.1  libfreetype.so.9  libgcc_s.so.1  libgdk-x11-2.0.so.0  libgdk_pixbuf-2.0.so.0  libgio-2.0.so.0  libglib-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgthread-2.0.so.0  libintl.so.9  libjasper.so.4  libjpeg.so.11  libm.so.5  libpango-1.0.so.0  libpangocairo-1.0.so.0  libpangoft2-1.0.so.0  libpcre.so.3  (+9 more)
src/common/: common.cpp  common.hpp
src/controller/: CMakeLists.txt  bsp.cpp  bsp.hpp  controller.conf  controller.conf.local  controller.cpp  downloader.cpp  fsm.hpp  global.cpp  global.hpp  main.cpp  post-update.sh  pre-update.sh  version.hpp.in
src/controller/assets/: rkt.rcss
src/controller/data/: template.rml  tutorial.rcss  tutorial.rml  tutorial.tga
src/controller/service/app/: run
src/controller/service/controller/: run
src/controller/service/controller/supervise/: status
